import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

plugins {
	id 'base'
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.jetbrains.kotlin.jvm' version '1.9.22'
	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.22'
	id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.22'
}

group = 'me.dio'
version = '0.0.1-SNAPSHOT'

java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility=JavaVersion.VERSION_21

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.16.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.flywaydb:flyway-core:10.8.1'
	implementation 'org.jetbrains.kotlin:kotlin-reflect'
	runtimeOnly 'com.h2database:h2:2.2.224'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.mockk:mockk:1.13.9'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
}

tasks.withType(KotlinCompile).configureEach {
	compilerOptions {
		freeCompilerArgs = ['-Xjsr305=strict']
	}
}

tasks.test{
	jvmArgs = ["-XX:+EnableDynamicAgentLoading"]
	useJUnitPlatform()
}

